# Unity-Consciousness-Liberation

./: .gitignore  DEPLOYMENT_VERIFICATION.md  FUTURE_KING_SEARCH_RESULTS.md  YOUR_SETUP_STATUS.md  ZERO_ERRORS_VERIFICATION.md
backend/: pyinstaller.spec
gui/: package.json
gui/src/: App.tsx
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main_unity.rs
gui/src/components/: Canvas.tsx  Controls.tsx  StatusBar.tsx
gui/src/lib/: preflight.ts
gui/src/pages/: Dashboard.tsx
release/: NOTES.md
scripts/: build_unity_macos.sh  smoke_test.sh
tests/: ui.spec.ts
