[package]
name = "evoagentx-gui"
version = "0.1.0"
description = "EvoAgentX Quantum-Psychedelic GUI"
authors = ["EvoAgentX Team"]
license = "MIT"
repository = "https://github.com/EvoAgentX/EvoAgentX"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sysinfo = "0.30"
anyhow = "1.0"
ureq = "2.9"  # For synchronous HTTP probing in preflight checks

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
